# test

./: README.md  requirements.txt  setup.cfg
src/example_package/: adapter.py  backtest.py  bettingdata.py  cricinfodata.py  cricinfoplayer.py  live.py  livematchsim.py  liveplayer.py  liveteam.py  matchsim.py  matchsimdelayed.py  model.py  player.py  regressionmodel.py  response.py  strategy_cric.py  team.py  tradingstrategy.py  util.py
